--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
     "react-native-builder-bob": "^",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
